k8s/base/network-policies/allow-frontend-egress.yaml
# frontend: accept from ALB; can call backend services
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: cloudmart-prod
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: product-service
      ports:
        - port: 8001
    - to:
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - port: 8002
    - to:
        - podSelector:
            matchLabels:
              app: user-service
      ports:
        - port: 8003
    - ports:
        - port: 53
          protocol: UDP
