k8s/base/network-policies/allow-product-service.yaml
# product-service: accept inbound from order-service and frontend only
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-product-service-ingress
  namespace: cloudmart-prod
spec:
  podSelector:
    matchLabels:
      app: product-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: order-service
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 8001
  egress:
    # Allow calls to AWS DynamoDB via VPC endpoint (HTTPS)
    - ports:
        - port: 443
    # DNS
    - ports:
        - port: 53
          protocol: UDP
